# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/test.gni")
import("//foundation/ability/dmsfwk/dmsfwk.gni")
ohos_fuzztest("DistributedWantFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file = "${dms_path}/test/fuzztest/distributedwant_fuzzer"
  include_dirs = [
    "${dms_path}/services/dtbschedmgr/include",
    "${dms_path}/services/dtbschedmgr/include/distributedWant",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
  ]
  sources = [ "distributedwant_fuzzer.cpp" ]

  configs = [ "${dms_path}/services/dtbschedmgr/test/resource:coverage_flags" ]

  deps = [ "${dms_path}/services/dtbschedmgr:distributedschedsvr" ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "c_utils:utils",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":DistributedWantFuzzTest" ]
}
