# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/dmsfwk/dmsfwk.gni")

config("abilityconnectionmanager_napi_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${dms_path}/common/include",
    "${dms_path}/interfaces/kits/napi/ability_connection_manager",
    "${dms_path}/services/dtbcollabmgr/include/ability_connection_manager",
    "${dms_path}/services/dtbcollabmgr/include/av_trans_stream_provider",
    "${dms_path}/services/dtbcollabmgr/include/channel_manager",
  ]
}

ohos_shared_library("abilityconnectionmanager_napi") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  install_enable = true

  sources = [
    "ability_connection_manager_module.cpp",
    "js_ability_connection_manager.cpp",
  ]

  public_configs = [
    ":abilityconnectionmanager_napi_public_config",
  ]

  deps = [ 
    "${dms_path}/services/dtbcollabmgr/src/ability_connection_manager:distributed_ability_connection_manager",
    "${dms_path}/services/dtbcollabmgr/src/channel_manager:dtbcollab_channel_manager",
    ]

  external_deps = [
    "ability_runtime:ability_context_native",
    "ability_runtime:abilitykit_native",
    "ability_runtime:napi_base_context",
    "ability_runtime:napi_common",
    "ability_runtime:runtime",
    "av_codec:av_codec_client",
    "av_codec:av_codec_media_engine_filters",
    "cJSON:cjson",
    "c_utils:utils",
    "graphic_surface:surface",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "media_foundation:media_foundation",
    "napi:ace_napi",
    "image_framework:image",
    "image_framework:image_native",
  ]

  relative_install_dir = "module/distributedsched"

  subsystem_name = "ability"
  part_name = "dmsfwk"
}