# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("continuationmanager_napi_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//foundation/ability/dmsfwk/interfaces/kits/napi/include/",
    "//foundation/ability/dmsfwk/services/dtbabilitymgr/include/",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("continuationmanager_napi") {
  sources = [
    "continuation_manager_module.cpp",
    "js_continuation_manager.cpp",
    "js_device_selection_listener.cpp",
  ]

  public_configs = [
    ":continuationmanager_napi_public_config",
    "//foundation/ability/dmsfwk/services/dtbschedmgr/test/resource:coverage_flags",
  ]

  deps = [
    "../../../innerkits/common:common_sdk",
    "../../../innerkits/continuation_manager:continuation_manager",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "ability_runtime:napi_common",
    "ability_runtime:module_manager",
    "ability_runtime:runtime",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  relative_install_dir = "module/continuation"

  subsystem_name = "ability"
  part_name = "dmsfwk"
}
