# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/ability/dmsfwk/dmsfwk.gni")

group("unittest") {
  testonly = true
  deps = [
    "${dms_path}/services/dtbcollabmgr/test/unittest/channel_manager:unittest",
  ]
}

config("distributed_collab_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${dms_path}/common/include",
    "${dms_path}/services/dtbcollabmgr/include/channel_manager",
  ]
}

ohos_shared_library("dtbcollab_channel_manager") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "av_trans_data_buffer.cpp",
    "av_trans_stream_data.cpp",
    "channel_manager.cpp",
    "data_sender_receiver.cpp",
    "session_data_header.cpp",
  ]

  if (dmsfwk_softbus_file_ability) {
    sources += [ "softbus_file_adapter_inner.cpp" ]
  } else {
    sources += [ "softbus_file_adapter_common.cpp" ]
  }

  configs = [ ":distributed_collab_config" ]

  deps = [ "${dms_path}/common:distributed_sched_utils" ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
  ]

  install_images = [ system_base_dir ]
  relative_install_dir = "platformsdk"
  part_name = "dmsfwk"
  subsystem_name = "ability"
}
