# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("//foundation/ability/dmsfwk/dmsfwk.gni")

module_output_path = "dmsfwk/distributedcollabtest"

config("test_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${dms_path}/services/dtbcollabmgr/include/ability_connection_manager",
    "${dms_path}/services/dtbcollabmgr/include/channel_manager",
    "${dms_path}/services/dtbcollabmgr/test/unittest/ability_connection_manager",
    "${dms_path}/common/include",
  ]
}

ohos_unittest("AbilityConnectionMgrTest") {
  visibility = [ ":*" ]

  module_out_path = module_output_path
  cflags = [ "-Dprivate=public" ]

  configs = [
    ":test_config",
    "${distributed_service}/dtbschedmgr/test/resource:coverage_flags",
  ]

  include_dirs = [
    "${dms_path}/interfaces/kits/napi/ability_connection_manager",
    "${dms_path}/services/dtbcollabmgr/include/av_trans_stream_provider",
    "${dms_path}/services/dtbcollabmgr/test/unittest",
  ]

  sources = [ "ability_connection_manager_test.cpp" ]

  deps = [
    "${dms_path}/common:distributed_sched_utils",
    "${dms_path}/services/dtbcollabmgr/src/ability_connection_manager:distributed_ability_connection_manager",
    "${dms_path}/services/dtbcollabmgr/src/channel_manager:dtbcollab_channel_manager",
  ]

  external_deps = [
    "av_codec:av_codec_client",
    "av_codec:native_media_codecbase",
    "cJSON:cjson",
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "media_foundation:media_foundation",
    "napi:ace_napi",
  ]

  part_name = "dmsfwk"
  subsystem_name = "ability"
}

ohos_unittest("AbilityConnectionMgrStubTest") {
  visibility = [ ":*" ]

  module_out_path = module_output_path
  cflags = [ "-Dprivate=public" ]

  configs = [
    ":test_config",
    "${distributed_service}/dtbschedmgr/test/resource:coverage_flags",
  ]

  include_dirs = [
    "${dms_path}/interfaces/kits/napi/ability_connection_manager",
    "${dms_path}/services/dtbcollabmgr/include/av_trans_stream_provider",
    "${dms_path}/services/dtbcollabmgr/test/unittest",
  ]

  sources = [ "ability_connection_manager_stub_test.cpp" ]

  deps = [
    "${dms_path}/common:distributed_sched_utils",
    "${dms_path}/services/dtbcollabmgr/src/ability_connection_manager:distributed_ability_connection_manager",
    "${dms_path}/services/dtbcollabmgr/src/channel_manager:dtbcollab_channel_manager",
  ]

  external_deps = [
    "av_codec:av_codec_client",
    "av_codec:native_media_codecbase",
    "cJSON:cjson",
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "googletest:gmock",
    "hilog:libhilog",
    "ipc:ipc_core",
    "media_foundation:media_foundation",
    "napi:ace_napi",
  ]

  part_name = "dmsfwk"
  subsystem_name = "ability"
}

group("unittest") {
  testonly = true
  deps = [
    ":AbilityConnectionMgrTest",
    ":AbilityConnectionMgrStubTest",
  ]
}
