# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../../dmsfwk.gni")

ohos_hap("bmsThirdBundle") {
  hap_profile = "./src/main/config.json"
  hap_name = "bmsThirdBundle"
  subsystem_name = "bundlemanager"
  final_hap_path = "$root_out_dir/tests/unittest/dmsfwk/distributedschedsvrtest/resource/${hap_name}.hap"
  testonly = true
  deps = [
    ":hjs_demo_js_assets",
    ":hjs_demo_resources",
  ]
  certificate_profile =
      "${dms_path}/test/sceneProject/signature/com.third.hiworld.example.p7b"
}
ohos_js_assets("hjs_demo_js_assets") {
  source_dir = "./src/main/js/default"
}
ohos_resources("hjs_demo_resources") {
  sources = [ "./src/main/js/resources" ]
  hap_profile = "./src/main/config.json"
}
